Added missing latex_proofs.tex

--- a/.gitignore
+++ b/.gitignore
@@ -28,3 +28,6 @@ lassy/proof.tex
 lassy/latex_proofs.aux
 lassy/latex_proofs.log
 lassy/latex_proofs.pdf
+latex_proofs.aux
+latex_proofs.log
+latex_proofs.pdf
