Corrections to the semantics of adverbs

--- a/.gitignore
+++ b/.gitignore
@@ -51,6 +51,10 @@ latex_proofs.aux
 latex_proofs.log
 latex_proofs.pdf
 immobilise.pdf
+sem.tex
+sem.aux
+sem.pdf
+sem.log
 proof.aux
 proof.log
 proof.pdf
