Update/correction to chart parser
Made update_seminfo application more robust (this predicate needs to be
rewritten more carefully), semantics computation now proceeds normally
even on failure.

Added grail_light_nd, which is a version of grail_light producing
natural deduction directly

Updated Supertag.tcl to allow choice between natural deduction and
chart output (defaults to natural deduction).

--- a/Makefile.in
+++ b/Makefile.in
@@ -4,9 +4,11 @@ addgl = @SED@ \
         -e 's/chart.pl/grail_light.pl/g'
 addglc = @SED@ \
         -e 's/chart.pl/grail_light_cr.pl/g'
+addglnd = @SED@ \
+        -e 's/grail_light.pl/grail_light_nd.pl/g'
 
 
-all: grail_light.pl grail_light_cr.pl
+all: grail_light.pl grail_light_cr.pl grail_light_nd.pl
 
 chart_lp.pl: chart.pl
 	@SED@ -e 's/%LP//g' chart.pl > chart_lp.pl
@@ -15,5 +17,7 @@ chart_cr.pl: chart.pl
 
 grail_light.pl: chart_lp.pl
 	$(addf) chart_lp.pl | $(addgl) | tail +2 > grail_light.pl
+grail_light_nd.pl: grail_light.pl
+	@SED@ -e 's/%output_proofs(nd)./output_proofs(nd)./g' grail_light.pl | @SED@ -e 's/output_proofs(chart)./%output_proofs(chart)./g' | $(addglnd)  > grail_light_nd.pl
 grail_light_cr.pl: chart_cr.pl
 	$(addf) chart_cr.pl | $(addglc) | tail +2 > grail_light_cr.pl
