Updated .in files, including Makefile

--- a/Makefile.in
+++ b/Makefile.in
@@ -8,7 +8,7 @@ addglnd = @SED@ \
         -e 's/grail_light.pl/grail_light_nd.pl/g'
 
 
-all: grail_light.pl grail_light_cr.pl grail_light_nd.pl
+all: grail_light.pl grail_light_cr.pl grail_light_nd.pl parser.tcl parser_cr.tcl
 
 chart_lp.pl: chart.pl
 	@SED@ -e 's/%LP//g' chart.pl > chart_lp.pl
@@ -21,3 +21,9 @@ grail_light_nd.pl: grail_light.pl
 	@SED@ -e 's/%output_proofs(nd)./output_proofs(nd)./g' grail_light.pl | @SED@ -e 's/output_proofs(chart)./%output_proofs(chart)./g' | $(addglnd)  > grail_light_nd.pl
 grail_light_cr.pl: chart_cr.pl
 	$(addf) chart_cr.pl | $(addglc) | tail +2 > grail_light_cr.pl
+
+parser.tcl: gui.tcl
+	@SED@ -e 's/#LP //g' gui.tcl > parser.tcl
+parser_cr.tcl: gui.tcl
+	@SED@ -e 's/#CR //g' gui.tcl > parser_cr.tcl
+
